# claude-relay

./: .gitignore  CLAUDE.md  Cargo.toml  HANDOVER.md  PLAN.md  README.ar.md  README.de.md  README.es.md  README.fr.md  README.hi.md  README.ja.md  README.ko.md  README.md  README.pt-br.md  README.ru.md  README.zh-cn.md  changelog.md  install.sh
.github/workflows/: release.yml
docs/: ARCHITECTURE.md  antigravity_compatibility.md  blog_testing_strategy.md
docs/bugs/: BUG-001-duplicate-ingest.md  BUG-002-fts-transaction.md  BUG-003-windows-offset.md  BUG-004-archive-transaction.md  BUG-005-like-injection.md  BUG-006-detect-code-match.md  BUG-007-id-float.md  BUG-008-multibyte-slice.md  BUG-009-null-cwd.md  README.md
src/: config.rs  db.rs  detect.rs  export.rs  ingest.rs  main.rs  mcp.rs
tests/: TEST_REPORT.md  bug_regression_test.sh  memory_recall_test.sh  memory_recall_test_v2.sh  seed_worker.sh  test_bugs.py  test_layer1_jsol.sh  test_layer2_ingest.sh  test_layer3_search.sh
