[package]
name = "claude-relay"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
dirs = "5"
glob = "0.3"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
shellexpand = "3"
